# LigidAPI

./: CMakeLists.txt  README.md  imgui.ini
Main/: example.c
Main/Example/: example.cpp
Main/Headers/: Canvas.h  Canvas_Utils.h  Filter.h  LigidAPI.h  OpenGL_specific.h  Render_Utils.h
Main/Source/: Canvas.c  Filter.c  LigidAPI.c  OpenGL_specific.c
